--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ branches:
   - master
 language: node_js
 node_js:
-  - "stable"
+  - "lts/*"
 cache:
   directories:
   - node_modules
@@ -14,4 +14,3 @@ install:
   - yarn install
 script:
   - yarn test
-deploy:
