--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,8 @@ jobs:
       script: ".travis/run_build_and_deploy.sh"
 stages:
   - test
-  - deploy
-  # - name: deploy
-  #   if: (branch = develop) AND (NOT (type IN (push, pull_request)))
+  - name: deploy
+    if: (branch = develop) AND (NOT (type IN (push, pull_request)))
 
 # script:
 #   - yarn test
